<resources>
    <string name="app_name">Pet Shop</string>
    <string name="escolha_o_seu_cachorro">Escolha o seu cachorro</string>
    <string name="pit_bull_r_700_00">Pit Bull R$ 750,00</string>
    <string name="pastor_alem_o_r_700">Pastor Alemão R$ 700</string>
    <string name="pastor_canadense_r_800_00">Pastor Canadense R$ 800,00</string>
    <string name="f_mea">Fêmea</string>
    <string name="adestrado">Adestrado</string>
    <string name="calcular">Calcular</string>
</resources>
